--- a/scss/_colors&font.scss
+++ b/scss/_colors&font.scss
@@ -2,5 +2,11 @@ $primary:  #ED462F;
 $secondary: #532FE6;
 $warning: #F5B813;
 $success: #6FAD6A;
-$font-size-base: 1.25rem;
 $font-family-base: "Lato";
+$font-size-base: 0.875rem;
+$h1-font-size: $font-size-base * 4.85714; 
+$h2-font-size: $font-size-base * 3.7142857;
+$h3-font-size: $font-size-base * 2.857143;
+$h4-font-size: $font-size-base * 2.285714;
+$h5-font-size: $font-size-base * 1.5;
+$badge-font-size: $font-size-base;
