--- a/scss/_customize.scss
+++ b/scss/_customize.scss
@@ -1,12 +1,16 @@
-@import "colors&font";
-@import "sidebar";
 @import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Anton&display=swap");
-$bg-dark-gradient: linear-gradient(
-  to bottom,
-  rgba($dark, 0.5),
-  rgba($dark, 0.9)
-);
+@import "colors&font";
+@import "sidebar";
+@import "premium";
+@import "subscriptions";
+@import "headerImage";
+@import "payment";
+@import "uploadVideo";
+@import "createAccount";
+@import "pageManagement";
+@import "watch_read";
+
 $bg-primary-gradient: linear-gradient(
   to bottom,
   rgba($primary, 0.9),
@@ -21,15 +25,19 @@ $bg-primary-gradient: linear-gradient(
 @mixin card-body {
   .card-body {
     display: flex;
+    justify-content: space-between;
+    p {
+      color: $gray-600;
+    }
+
     .badge {
       align-self: start;
-      margin: 5px;
+      margin-left: 20px;
     }
   }
 }
 
 body {
-  font-size: $font-size-base;
   margin: 0;
   padding: 0;
   display: flex;
@@ -50,69 +58,45 @@ h6 {
   color: $secondary;
 }
 
-p {
-  color: $gray-100;
-  font-size: $font-size-base * 0.8;
-}
-
-small {
-  color: $gray-600;
-}
-
 #side-bar-button {
-  padding: 9px 15px;
+  padding: 11px 15px 14px 15px;
   margin: 5px 15px;
   position: absolute;
   z-index: 2;
   top: 2%;
 }
 
-.main-img-section {
-  margin: 10px;
-  position: relative;
-  border-radius: 5px;
-  background: $bg-dark-gradient, url("/assets/images/video.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-
-  .main-img-content {
-    display: flex;
-    padding: 32vw 3rem 4rem 4rem;
-    justify-content: space-between;
-
-    .btn-play {
-      padding-left: 10px;
-      align-self: center;
-    }
-
-    .tag {
-      .badge {
-        margin: 2px;
-      }
-      .badge-warning {
-        color: $white;
-      }
-
-      @media screen and (max-width: 540px) {
-        display: flex;
-        flex-direction: column;
-      }
-    }
-  }
-  .small {
-    padding: 13rem 3rem 3rem 3rem;
-  }
-}
-
 .showmore-section {
   display: flex;
   justify-content: center;
-  margin-top: 5vh;
+  margin-top: $h4-font-size;
+  margin-bottom: $h4-font-size;
+}
+
+.dotted-group {
+  display: block;
+  text-align: right;
+  margin-top: 10px;
+}
+.dotted {
+  padding: 1px 9px;
+  margin-left: 1px;
+  margin-right: 1px;
+  border-radius: 50%;
+}
+.dot-primary {
+  background: $primary;
+}
+.dot-secondary {
+  background: $secondary;
+}
+.dot-success {
+  background: $success;
 }
 
 .card-list {
   margin-top: 7vh;
-  h2 {
+  h3 {
     text-align: center;
     margin-bottom: 50px;
   }
@@ -133,6 +117,7 @@ small {
     .card-img {
       @include card-img(243px);
     }
+    @include card-body;
   }
 }
 
@@ -146,10 +131,10 @@ small {
     padding: 12vh 10vh;
     color: $gray-100;
 
-    h1 {
+    h3 {
       text-align: center;
       color: $gray-100;
-      margin-bottom: 20px;
+      margin-bottom: $h2-font-size;
       b {
         color: $dark;
       }
@@ -158,7 +143,7 @@ small {
       }
     }
     p {
-      font-size: $font-size-base;
+      font-size: $font-size-base * 1.42857;
     }
   }
 }
@@ -181,7 +166,7 @@ small {
     @media screen and (max-width: 992px) {
       top: 50%;
     }
-    h1 {
+    h3 {
       color: $dark;
       text-align: center;
     }
@@ -200,26 +185,5 @@ small {
         }
       }
     }
-  }
-}
-
-.nav {
-  margin-top: 5vh;
-  .active {
-    padding-bottom: 10px;
-    border-bottom: 1px solid $primary;
-  }
-  .nav-item {
-    margin-left: 15px;
-    margin-right: 15px;
-    .nav-link {
-      font-size: $font-size-base * 0.8;
-    }
-  }
-  .line-right {
-    border-right: 2px solid $secondary;
-  }
-  .following {
-    color: $secondary;
   }
 }
