--- a/scss/_pageManagement.scss
+++ b/scss/_pageManagement.scss
@@ -1,65 +1,75 @@
+@use 'globalStyles'as *;
+
 #header-img {
   background: url("/assets/images/1.png");
   background-repeat: no-repeat;
   background-size: cover;
-  margin-top: -250px;
   height: 80vh;
   position: relative;
+  @include margin-top(-250px);
+
   @media screen and (max-width: 720px) {
-    margin-top: 0px;
+    @include margin-top(0px);
     height: 30vh;
   }
+
   .header-avatar {
     position: absolute;
-    display: flex;
-    justify-content: center;
     top: 80%;
     width: 100%;
+    @include justify-content-center;
+
     @media screen and (max-width: 720px) {
       top: 60%;
     }
+
     img {
       width: 150px;
       object-fit: cover;
     }
   }
 }
+
 #page-management {
-  margin-top: $h2-font-size;
-  h4 {
-    text-align: center;
-  }
+  @include margin-top($h2-font-size);
+
+  h4,
   p {
-    text-align: center;
+    @include text-center;
   }
+
   .social-group {
-    display: flex;
-    justify-content: center;
+    @include justify-content-center;
+
     .icon {
-      color: $gray-100;
       background-color: $primary;
       border-radius: 50%;
-      margin-left: 5px;
-      margin-right: 5px;
+      @include text-white;
+      @include margin-left(5px);
+      @include margin-right(5px);
+
       .facebook,
       .instagram {
-        padding: 10px;
+        padding: $h6-font-size;
       }
     }
   }
+
   .nav {
-    display: flex;
-    justify-content: center;
-    margin-top: 5vh;
+    @include justify-content-center;
+    @include margin-top(5vh);
+
     .active {
-      padding-bottom: 10px;
+      padding-bottom: $h6-font-size;
       border-bottom: 1px solid $primary;
     }
+
     .nav-item {
-      margin-left: 15px;
-      margin-right: 15px;
+      @include margin-left(15px);
+      @include margin-right(15px);
     }
   }
+
   .card-setting {
     position: absolute;
     width: 60px;
