--- a/scss/_payment.scss
+++ b/scss/_payment.scss
@@ -1,49 +1,53 @@
-@mixin margin-top($font-size) {
-  margin-top: $font-size;
-}
-@mixin margin-bottom($font-size) {
-  margin-bottom: $font-size;
-}
+@use 'globalStyles'as *;
+
 #payment {
   @include margin-top($h1-font-size * 2);
+
   h3 {
-    text-align: center;
+    @include text-center;
     @include margin-bottom($h6-font-size);
   }
+
   h5 {
-    text-align: center;
+    @include text-center;
+    @include text-muted;
     font-family: $font-family-base;
-    color: $gray-600;
   }
+
   form {
-    label{
+    label {
       font-weight: bolder;
     }
+
+    @include justify-content-center;
     @include margin-top($h4-font-size);
-    display: flex;
-    justify-content: center;
+
     @media screen and (max-width: 720px) {
       flex-direction: column;
     }
+
     .billing-info,
     .credit-card {
       min-width: $h4-font-size * 10;
-      margin: $h4-font-size;
+      @include margin($h4-font-size);
     }
+
     .billing-info {
       .country-select {
         select {
-          height: calc(1.5em + 0.75rem + 2px);;
+          height: calc(1.5em + 0.75rem + 2px);
           width: 100%;
-          color: $gray-600;
+          @include text-muted;
         }
       }
     }
+
     .credit-card {
       #cvv {
         width: 20%;
       }
     }
+
     h4 {
       font-family: $font-family-base;
       @include margin-bottom($h4-font-size);
