--- a/scss/_uploadVideo.scss
+++ b/scss/_uploadVideo.scss
@@ -1,23 +1,30 @@
+@use 'globalStyles'as *;
+
 #upload-video {
-  margin-top: $h2-font-size * 2;
+  @include margin-top($h2-font-size * 2);
+
   .button-group {
-    text-align: center;
+    @include text-center;
+
     .btn {
-      margin-left: 5px;
-      margin-right: 5px;
+      @include margin-left(5px);
+      @include margin-right(5px);
     }
   }
+
   .context {
-    margin-top: $h1-font-size;
-    margin-left: $h1-font-size;
-    margin-right: $h1-font-size;
+    @include margin-left($h1-font-size);
+    @include margin-right($h1-font-size);
+    @include margin-top($h1-font-size);
+
     .add-video {
-      margin-bottom: $h6-font-size;
-      margin-top: $h6-font-size;
+      @include margin-top($h6-font-size);
+      @include margin-bottom($h6-font-size);
       border: 1px solid $gray-900;
       border-radius: $border-radius;
       height: 72vh;
       position: relative;
+
       h3 {
         position: absolute;
         top: 50%;
@@ -25,48 +32,57 @@
         transform: translate(-50%, -50%);
       }
     }
-    .add-info {
-      margin-bottom: $h6-font-size;
-      margin-top: $h6-font-size;
+
+    .add-information {
+      @include margin-top($h6-font-size);
+      @include margin-bottom($h6-font-size);
+
       .input-group-text {
-        display: flex;
-        justify-content: center;
+        @include justify-content-center;
+        @include text-center;
         padding: 15px 30px;
         width: 160px;
-        text-align: center;
       }
+
       .form-control {
         padding: 15px 20px;
         height: 60px;
       }
+
       .input-group,
       .input-group-description {
-        margin-bottom: $h5-font-size;
+        @include margin-bottom($h5-font-size);
       }
+
       .input-group-description {
         .input-group-text {
           border-radius: $border-radius $border-radius 0px 0px;
         }
+
         textarea {
           height: 20vh;
           border-radius: 0px $border-radius $border-radius $border-radius;
         }
       }
-      #genre-select {
+
+      .genre-select {
         border: none;
         background: transparent;
         height: inherit;
-        margin-top: -16px;
-        margin-left: -7px;
         width: 105%;
-        color: $gray-600;
+        @include margin-top(-16px);
+        @include margin-left(-7px);
+        @include text-muted;
       }
+
       button {
         display: flex;
       }
+
       .icon-text {
         padding-right: 5px;
       }
+
       .icon {
         padding-left: 5px;
       }
