--- a/scss/_watch_read.scss
+++ b/scss/_watch_read.scss
@@ -1,64 +1,62 @@
+@use 'globalStyles' as *;
 .author {
-  margin-top: $h2-font-size;
+  @include margin-top($h2-font-size);
+  @include justify-content-center;
+  align-items: center;
   img {
     height: 50px;
   }
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  .author-info {
-    margin-left: 15px;
-    margin-right: 25px;
-    .author-name {
+  &__information {
+    @include margin-left(15px);
+    @include margin-right(25px);
+    &--fullname {
       font-weight: bolder;
+      font-size: $h5-font-size !important;
+      @include margin-bottom(0px);
     }
-    .author-follower {
+    &--follower {
       font-style: italic;
-      color: $gray-600;
-    }
-    p {
-      margin-bottom: 0;
-      color: $dark;
-      font-size: $font-size-base + 0.1;
+      font-size: $h6-font-size !important;
+      color: $gray-500;
+      @include margin-bottom(0px);
     }
   }
 }
-#watch-read-1-section {
+#watch-read-1 {
   padding-top: $h1-font-size;
   p {
-    font-size: 20px;
+    font-size: $h5-font-size;
     overflow: hidden;
   }
   a {
-    display: flex;
-    justify-content: center;
+    @include justify-content-center;
     color: $secondary;
   }
   .chapter-control {
-    margin-top: $h1-font-size;
+    @include margin-top($h1-font-size);
     padding-left: $h1-font-size;
     padding-right: $h1-font-size;
     display: flex;
     align-items: center;
     .form-control {
-      margin-right: 10px;
-      margin-left: 10px;
+      @include margin-left(10px);
+      @include margin-right(10px);
     }
     img {
       width: $h3-font-size;
     }
   }
-  .read-section {
-    margin-top: $h4-font-size;
+  .read {
+    @include margin-top($h4-font-size);
     img {
       width: 100%;
-      margin-top: 40px;
-      margin-bottom: 40px;
+      @include margin-top($h3-font-size);
+      @include margin-bottom($h3-font-size);
     }
   }
 }
-#watch-read-2-section {
-  margin-top: $h3-font-size;
+#watch-read-2 {
+  @include margin-top($h3-font-size);
   padding-left: $h3-font-size;
   padding-right: $h3-font-size;
   p {
@@ -70,49 +68,114 @@
     padding-top: $h3-font-size;
     padding-bottom: $h6-font-size;
     h3 {
-      margin-bottom: 0px;
-      margin-right: 25px;
+      @include margin-bottom(0px);
+      @include margin-right($h5-font-size);
     }
   }
   .card-list {
     p {
-      font-size: 14px;
+      font-size: $h6-font-size;
     }
-    margin-top: 0px;
+    @include margin-top(0px);
     padding-top: 10px;
-    border-left: 1px solid $gray-300;
+    border-left: 1px solid $gray-500;
   }
   .author {
     justify-content: start;
     button {
-      margin-left: auto;
-      margin-right: $h1-font-size;
+      @include margin-left(auto);
+      @include margin-right($h1-font-size);
     }
   }
   textarea {
-    margin-top: $h2-font-size;
-    margin-bottom: $h6-font-size;
+    @include margin-top($h2-font-size);
+    @include margin-bottom($h6-font-size);
   }
-  .comment-info {
-    p {
-      margin-bottom: 0px;
-    }
+  .comments__information {
     img {
       width: 45px;
     }
-    margin-bottom: 20px;
     display: flex;
     align-items: center;
     justify-content: start;
-    margin-top: $h1-font-size;
-    .comment-name {
+    @include margin-top($h1-font-size);
+    @include margin-bottom($h5-font-size);
+    &--name {
       font-weight: bolder;
-      margin-left: 20px;
+      @include margin-left($h6-font-size);
+      @include margin-bottom(0px);
     }
-    .comment-time {
+    &--datetime {
       font-style: italic;
-      margin-left: 20px;
-      color: $gray-600;
+      color: $gray-500;
+      @include margin-left($h6-font-size);
+      @include margin-bottom(0px);
+    }
+  }
+}
+.video {
+  padding: $h6-font-size;
+  position: relative;
+  width: 100%;
+  &__header {
+    height: 90vh;
+    width: 100%;
+    object-fit: cover;
+  }
+  &__control {
+    position: absolute;
+    width: 100%;
+    top: 40%;
+    @include justify-content-center;
+    &--previous,
+    &--pause,
+    &--next {
+      @include margin-left(5px);
+      @include margin-right(5px);
+      img {
+        height: 90px;
+      }
+    }
+  }
+  &__slider {
+    background: $dark;
+    display: flex;
+    align-items: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    &--play-button,
+    &--volume {
+      @include margin-left(10px);
+    }
+    &--range-slide {
+      width: 100px;
+      @include margin-left(10px);
+      .slider {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 100%;
+        height: 10px;
+        border-radius: $border-radius;
+        background: $gray-600;
+        border: none;
+        outline: none;
+        &::-webkit-slider-thumb {
+          -webkit-appearance: none;
+          border-radius: 50%;
+          appearance: none;
+          width: 20px;
+          height: 20px;
+          background: $white;
+          cursor: pointer;
+        }
+      }
+    }
+    &--square {
+      @include margin-left(auto);
+    }
+    &--maximize {
+      @include margin-left(10px);
+      @include margin-right(10px);
     }
   }
 }
