Remove Vuejs and fix card UI

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,8 +5,9 @@ $badge-padding-x: 40px;
 $badge-pill-padding-x: 40px;
 $input-btn-padding-x: 1.5rem;
 $input-btn-padding-y: 0.6rem;
-$input-btn-padding-y-lg: 0.8rem;
 $input-btn-padding-x-lg: 3.5rem;
+$input-btn-padding-y-lg: 0.8rem;
+$input-btn-padding-x-sm: 1rem;
 
 // Bootstrap and its required default variables
 @import "node_modules/bootstrap/scss/functions";
