--- a/css/style.css
+++ b/css/style.css
@@ -428,7 +428,7 @@ fieldset:disabled a.btn {
   border-radius: 0.3rem; }
 
 .btn-sm {
-  padding: 0.25rem 0.5rem;
+  padding: 0.25rem 1rem;
   font-size: 0.76562rem;
   line-height: 1.5;
   border-radius: 0.2rem; }
@@ -2176,7 +2176,7 @@ select.form-control:focus::-ms-value {
 
 .form-control-sm {
   height: calc(1.5em + 0.5rem + 2px);
-  padding: 0.25rem 0.5rem;
+  padding: 0.25rem 1rem;
   font-size: 0.76562rem;
   line-height: 1.5;
   border-radius: 0.2rem; }
@@ -2564,7 +2564,7 @@ textarea.form-control {
 .input-group-sm > .input-group-append > .input-group-text,
 .input-group-sm > .input-group-prepend > .btn,
 .input-group-sm > .input-group-append > .btn {
-  padding: 0.25rem 0.5rem;
+  padding: 0.25rem 1rem;
   font-size: 0.76562rem;
   line-height: 1.5;
   border-radius: 0.2rem; }
@@ -2591,6 +2591,13 @@ textarea.form-control {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0; }
 
+.d-none {
+  display: none; }
+
+.showmore-btn {
+  color: #532FE6;
+  padding: 0px; }
+
 #sidebar-button {
   padding: 11px 15px 14px 15px;
   margin: 5px 15px;
@@ -2604,74 +2611,109 @@ textarea.form-control {
   margin-top: 2.0rem;
   margin-bottom: 2.0rem; }
 
-.dotted-group {
-  display: block;
-  text-align: right;
-  margin-top: 0.875rem; }
+.dot-group .dot-primary {
+  fill: #ED462F; }
 
-.dotted {
-  padding: 1px 9px;
-  margin-left: 1px;
-  margin-right: 1px;
-  border-radius: 50%; }
+.dot-group .dot-secondary {
+  fill: #532FE6; }
 
-.dot-primary {
-  background: #ED462F; }
+.dot-group .dot-warning {
+  fill: #F5B813; }
 
-.dot-secondary {
-  background: #532FE6; }
-
-.dot-success {
-  background: #6FAD6A; }
+.dot-group .dot-success {
+  fill: #6FAD6A; }
 
 .card-list {
   margin-top: 7vh; }
   .card-list h3 {
     text-align: center;
     margin-bottom: 3.25rem; }
+  .card-list .card-img-gradient {
+    position: relative;
+    display: inline-block; }
+    .card-list .card-img-gradient .tag {
+      display: none;
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 1; }
+      .card-list .card-img-gradient .tag .badge {
+        padding: 8px 20px; }
+    .card-list .card-img-gradient:after {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      display: none;
+      background: linear-gradient(to bottom, rgba(52, 58, 64, 0.7), rgba(52, 58, 64, 0.9)); }
+    .card-list .card-img-gradient:hover .tag {
+      display: block; }
+    .card-list .card-img-gradient:hover:after {
+      display: inline-block; }
   .card-list .card-left .card-img,
   .card-list .card-right .card-img {
     height: 600px;
-    border-radius: 5px;
+    border-radius: 0.25rem;
     object-fit: cover;
     width: 100%; }
-  .card-list .card-left .card-body,
-  .card-list .card-right .card-body {
+  .card-list .card-left .card-body .card-first,
+  .card-list .card-right .card-body .card-first {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap; }
+    .card-list .card-left .card-body .card-first .btn,
+    .card-list .card-right .card-body .card-first .btn {
+      margin-bottom: 12px; }
+  .card-list .card-left .card-body .card-second,
+  .card-list .card-right .card-body .card-second {
+    display: flex;
+    align-items: center;
     justify-content: space-between; }
-    .card-list .card-left .card-body p,
-    .card-list .card-right .card-body p {
-      color: #6c757d; }
-    .card-list .card-left .card-body .badge,
-    .card-list .card-right .card-body .badge {
-      align-self: start;
-      margin-left: 1.3125rem; }
+    .card-list .card-left .card-body .card-second p,
+    .card-list .card-right .card-body .card-second p {
+      color: #6c757d;
+      margin-bottom: 0px; }
   .card-list .card-small .card-img {
     height: 300px;
-    border-radius: 5px;
+    border-radius: 0.25rem;
     object-fit: cover;
     width: 100%; }
-  .card-list .card-small .card-body {
+  .card-list .card-small .card-body .card-first {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap; }
+    .card-list .card-small .card-body .card-first .btn {
+      margin-bottom: 12px; }
+  .card-list .card-small .card-body .card-second {
+    display: flex;
+    align-items: center;
     justify-content: space-between; }
-    .card-list .card-small .card-body p {
-      color: #6c757d; }
-    .card-list .card-small .card-body .badge {
-      align-self: start;
-      margin-left: 1.3125rem; }
+    .card-list .card-small .card-body .card-second p {
+      color: #6c757d;
+      margin-bottom: 0px; }
   .card-list .card-middle .card-img {
-    height: 243px;
-    border-radius: 5px;
+    height: 250px;
+    border-radius: 0.25rem;
     object-fit: cover;
     width: 100%; }
-  .card-list .card-middle .card-body {
+  .card-list .card-middle .card-body .card-first {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap; }
+    .card-list .card-middle .card-body .card-first .btn {
+      margin-bottom: 12px; }
+  .card-list .card-middle .card-body .card-second {
+    display: flex;
+    align-items: center;
     justify-content: space-between; }
-    .card-list .card-middle .card-body p {
-      color: #6c757d; }
-    .card-list .card-middle .card-body .badge {
-      align-self: start;
-      margin-left: 1.3125rem; }
+    .card-list .card-middle .card-body .card-second p {
+      color: #6c757d;
+      margin-bottom: 0px; }
 
 @use 'globalStyles'as *;
 .sidebar {
@@ -2681,7 +2723,6 @@ textarea.form-control {
   overflow-x: hidden;
   top: 0;
   left: 0;
-  z-index: 1;
   box-shadow: 0 15px 25px 0 rgba(33, 37, 41, 0.55); }
   .sidebar-content {
     display: block;
@@ -2830,11 +2871,6 @@ textarea.form-control {
 
 .tag .badge-warning {
   color: #fff; }
-
-@media screen and (max-width: 540px) {
-  .tag {
-    display: flex;
-    flex-direction: column; } }
 
 @use 'globalStyles'as *;
 #payment {
@@ -3040,10 +3076,9 @@ textarea.form-control {
   #watch-read-1 p {
     font-size: 1.3125rem;
     overflow: hidden; }
-  #watch-read-1 a {
+  #watch-read-1 .center {
     display: flex;
-    justify-content: center;
-    color: #532FE6; }
+    justify-content: center; }
   #watch-read-1 .chapter-control {
     margin-top: 4.25rem;
     padding-left: 4.25rem;
@@ -3181,7 +3216,6 @@ h6 {
   color: #532FE6; }
 
 main {
-  z-index: 2;
   width: 100%;
   transition: all 0.7s; }
 
