--- a/scss/_globalStyles.scss
+++ b/scss/_globalStyles.scss
@@ -34,7 +34,13 @@
 @mixin margin($size) {
   margin: $size;
 }
-
+.d-none {
+  display: none;
+}
+.showmore-btn {
+  color: $secondary;
+  padding: 0px;
+}
 #sidebar-button {
   padding: 11px 15px 14px 15px;
   margin: 5px 15px;
@@ -50,51 +56,48 @@
 }
 
 // ----- Dot section ----- //
-.dotted-group {
-  display: block;
-  text-align: right;
-  @include margin-top($h6-font-size);
-}
-
-.dotted {
-  padding: 1px 9px;
-  @include margin-left(1px);
-  @include margin-right(1px);
-  border-radius: 50%;
-}
-
-.dot-primary {
-  background: $primary;
-}
-
-.dot-secondary {
-  background: $secondary;
-}
-
-.dot-success {
-  background: $success;
+.dot-group {
+  .dot-primary {
+    fill: $primary;
+  }
+  .dot-secondary {
+    fill: $secondary;
+  }
+  .dot-warning {
+    fill: $warning;
+  }
+  .dot-success {
+    fill: $success;
+  }
 }
 
 // ----- Card section ----- //
 @mixin card-img($height) {
   height: $height;
-  border-radius: 5px;
+  border-radius: $border-radius;
   object-fit: cover;
   width: 100%;
 }
 
 @mixin card-body {
   .card-body {
-    display: flex;
-    justify-content: space-between;
-
-    p {
-      @include text-muted;
+    .card-first {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      .btn {
+        @include margin-bottom(12px);
+      }
     }
-
-    .badge {
-      align-self: start;
-      @include margin-left($h5-font-size);
+    .card-second {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      p {
+        @include text-muted;
+        @include margin-bottom(0px);
+      }
     }
   }
 }
@@ -105,6 +108,42 @@
   h3 {
     @include text-center;
     @include margin-bottom($h2-font-size);
+  }
+  .card-img-gradient {
+    position: relative;
+    display: inline-block;
+    .tag {
+      display: none;
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 1;
+      .badge {
+        padding: 8px 20px;
+      }
+    }
+    &:after {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      display: none;
+      background: linear-gradient(
+        to bottom,
+        rgba($dark, 0.7),
+        rgba($dark, 0.9)
+      );
+    }
+    &:hover {
+      .tag {
+        display: block;
+      }
+      &:after {
+        display: inline-block;
+      }
+    }
   }
 
   .card-left,
@@ -126,7 +165,7 @@
 
   .card-middle {
     .card-img {
-      @include card-img(243px);
+      @include card-img(250px);
     }
 
     @include card-body;
