--- a/scss/_watch_read.scss
+++ b/scss/_watch_read.scss
@@ -28,9 +28,8 @@
     font-size: $h5-font-size;
     overflow: hidden;
   }
-  a {
+  .center{
     @include justify-content-center;
-    color: $secondary;
   }
   .chapter-control {
     @include margin-top($h1-font-size);
