--- a/scss/pages/_payment.scss
+++ b/scss/pages/_payment.scss
@@ -1,4 +1,4 @@
-@use 'globalStyles'as *;
+@use 'base/globalStyles'as *;
 
 #payment {
   @include margin-top($h1-font-size * 2);
@@ -19,10 +19,9 @@
       font-weight: bolder;
     }
 
-    @include justify-content-center;
+    @include justify-content(center);
     @include margin-top($h4-font-size);
-
-    @media screen and (max-width: 720px) {
+    @include max-width("md"){
       flex-direction: column;
     }
 
