--- a/scss/pages/_createAccount.scss
+++ b/scss/pages/_createAccount.scss
@@ -1,4 +1,4 @@
-@use 'globalStyles'as *;
+@use 'base/globalStyles'as *;
 
 #create-account {
   @include margin-top($h2-font-size * 2);
@@ -24,7 +24,7 @@
   }
 
   form {
-    @include justify-content-center;
+    @include justify-content(center);
 
     label {
       font-weight: bolder;
@@ -34,8 +34,7 @@
       width: 40%;
       @include margin-left($h4-font-size);
       @include margin-right($h4-font-size);
-
-      @media screen and (max-width: 720px) {
+      @include max-width("lg") {
         width: 100%;
       }
     }
