--- a/scss/pages/_pageManagement.scss
+++ b/scss/pages/_pageManagement.scss
@@ -1,4 +1,4 @@
-@use 'globalStyles'as *;
+@use 'base/globalStyles'as *;
 
 #header-img {
   background: url("/assets/images/1.png");
@@ -7,19 +7,16 @@
   height: 80vh;
   position: relative;
   @include margin-top(-250px);
-
-  @media screen and (max-width: 720px) {
+  @include max-width("md") {
     @include margin-top(0px);
     height: 30vh;
   }
-
   .header-avatar {
     position: absolute;
     top: 80%;
     width: 100%;
-    @include justify-content-center;
-
-    @media screen and (max-width: 720px) {
+    @include justify-content(center);
+    @include max-width("md") {
       top: 60%;
     }
 
@@ -39,7 +36,7 @@
   }
 
   .social-group {
-    @include justify-content-center;
+    @include justify-content(center);
 
     .icon {
       background-color: $primary;
@@ -56,7 +53,7 @@
   }
 
   .nav {
-    @include justify-content-center;
+    @include justify-content(center);
     @include margin-top(5vh);
 
     .active {
