--- a/scss/pages/_premium.scss
+++ b/scss/pages/_premium.scss
@@ -1,4 +1,4 @@
-@use 'globalStyles'as *;
+@use 'base/globalStyles'as *;
 
 #premium {
   @include margin-top($h1-font-size * 2);
@@ -16,7 +16,7 @@
 
   .options {
     @include margin-top($h1-font-size);
-    @include justify-content-center;
+    @include justify-content(center);
 
     @media screen and (max-width: 720px) {
       flex-direction: column;
